--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
   },
   "homepage": "https://demos.creative-tim.com/nextjs-material-kit",
   "dependencies": {
-    "cypress": "^10.0.3",
     "@material-ui/core": "4.11.4",
     "@material-ui/icons": "4.11.2",
     "classnames": "2.3.1",
+    "cypress": "^10.0.3",
     "gh-pages": "^4.0.0",
     "moment": "2.29.4",
     "netlify-cli": "^12.7.2",
@@ -57,7 +57,8 @@
   "peerDependencies": {
     "react": "latest",
     "react-dom": "latest"
-  },"devDependencies": {
-    "@netlify/plugin-nextjs": "^4.18.0"
+  },
+  "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.30.0"
   }
 }
