--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,6 @@
 [build]
   command = "next build && next export"
-  publish = ".next"
+  publish = "out"
 
 [[plugins]]
-  package = "netlify-plugin-cypress"
   package = "@netlify/plugin-nextjs"
